--- a/public/upload.html
+++ b/public/upload.html
@@ -46,6 +46,7 @@
         </p>
 
       </form>
+      <input type="button" name="Submit" value="商品列表" class="btn" onclick="location.href='/display'" />
     </div>
   </div>
 
