feat: add email

--- a/public/upload.html
+++ b/public/upload.html
@@ -32,6 +32,9 @@
         <h5>名稱</h5>
         <input id="name" name="name" type="text" placeholder="商品名稱">
 
+        <h5>電子信箱</h5>
+        <input id="email" name="email" type="email" placeholder="電子信箱地址">
+
         <h5>起標價</h5>
         <input id="beginPrice" name="beginPrice" type="number" placeholder="起標價（TWD）">
 
