styple: update API name

--- a/public/upload.html
+++ b/public/upload.html
@@ -21,7 +21,7 @@
     <div class="item">
       <h2>新增標物</h2>
 
-      <form id="form1" name="form1" method="post" action="http://127.0.0.1:3000/upload" onclick="return false">
+      <form id="form1" name="form1" method="post" action="http://127.0.0.1:3000/uploadItem" onclick="return false">
         <!--
         <h5>上傳商品圖片</h5>
 
